# gaia

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  FitsConverter_checkpoint.txt  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  t.py  tox.ini
.github/actions/: setup-poetry-env.yaml
.github/actions/setup-poetry-env/: action.yaml
.github/workflows/: checks.yaml  main.yaml  tests.yaml
conf/: config.yaml
conf/hydra/job_logging/: custom.yaml
configs/: config.yaml
configs/create_features/: kepler_gcp.yaml  kepler_local.yaml
configs/data/: kepler_gcp.yaml  kepler_local.yaml
configs/data_providers/: kepler_local.yaml
configs/download/: kepler.yaml
configs/preprocess_data/: kepler.yaml
configs/ui/: local.yaml
gaia/: api.py  asynchronous.py  config.py  constants.py  downloaders.py  enums.py  http.py  hydra_config.py  io.py  log.py  math.py  model_selection.py  plotly.py  progress.py  quarters.py  spark.py  stats.py  utils.py
gaia/data/: combiners.py  converters.py  db.py  mappers.py  model_selection.py  models.py  preprocessing.py  sources.py  stores.py
gaia/data/beam/: schema.py
gaia/data/ops/: binning.py  fitting.py  time_series.py  views.py
gaia/io/: core.py  kepler.py
gaia/scripts/: convert_data_format.py  create_features.py  download_data.py  fetch_data.py  load_to_parquet.py  merge_tce.py  preprocess_data.py  run_dashboard.py  submit_spark_create_features_job.py  t.py
gaia/ui/: cli.py  components.py  dashboard.py  store.py  utils.py
gaia/ui/assets/: auto-close-details.js  custom.css
gaia/utils/: asynchronous.py  log.py  logs.py  progress.py
gaia/visualisation/: plotly.py
tests/: api_test.py  combiners_test.py  conftest.py  downloaders_test.py  http_test.py  io_test.py  mappers_test.py  model_selection_test.py  models_test.py  preprocessing_test.py  quarters_test.py  sample_test.py  stats_test.py  test_api.py  test_io.py  utils_test.py
tests/data/: converters_test.py  db_test.py  mappers_test.py  models_test.py  preprocessing_test.py  sources_test.py  stores_test.py  test_sources.py
tests/data/ops/: test_binning.py  test_fitting.py  test_time_series.py
tests/io/: test_kepler.py
tests/ui/: utils_test.py
