[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "GAIA"
version = "0.1.0"
description = "Exoplanet classification system with an explainable ANN model"
authors = [{ name = "Krzysztof Gonet", email = "36476874+Savaed@users.noreply.github.com" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp",
    "hydra-core",
    "rich",
    "structlog",
    "tensorflow",
]

[project.optional-dependencies]
dev = [
  "covdefaults",
  "coverage",
  "pytest",
  "pytest-asyncio",
  "pytest-mock",
]

[tool.pytest.ini_options]
pythonpath = "."

[tool.coverage.run]
plugins = ["covdefaults"]
omit = ["**/conftest.py", "**/progress.py"]

[tool.isort]
profile = "black"
lines_after_imports = 2
line_length = 100

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.mypy]
mypy_path = "."
explicit_package_bases = true
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
